mcgtnh-trap/sshd-statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: sshd

spec:
  serviceName: sshd
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: sshd

  persistentVolumeClaimRetentionPolicy:
    whenScaled: Delete
    whenDeleted: Delete
  volumeClaimTemplates:
    - metadata:
        name: ssh-keys
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Mi

  template:
    metadata:
      labels:
        app: sshd
    spec:
      enableServiceLinks: false
      serviceAccountName: sshd
      nodeSelector:
        kubernetes.io/hostname: moto-a1-3

      volumes:
        - name: authorized-keys
          configMap:
            name: authorized-keys
            defaultMode: 0600
        - name: bin
          emptyDir: {}
        - name: scripts
          configMap:
            name: scripts
            defaultMode: 0755
        - name: data
          hostPath:
            path: /srv/mcgtnh-trap

      containers:
        - name: sshd
          image: quay.io/panubo/sshd:1.9.0
          command:
            - sh
            - -c
            # https://github.com/panubo/docker-sshd/blob/main/Dockerfile
            - '/root/scripts/init.sh && exec /entry.sh /usr/sbin/sshd -D -e -f /etc/ssh/sshd_config'
          ports:
            - name: sshd
              containerPort: 22
          volumeMounts:
            - mountPath: /root/.ssh/authorized_keys
              name: authorized-keys
              subPath: authorized_keys
            - mountPath: /etc/ssh/keys
              name: ssh-keys
            - mountPath: /usr/local/bin
              name: bin
            - mountPath: /root/scripts
              name: scripts
            - mountPath: /srv/mcgtnh-trap
              name: data
