mcgtnh-trap/dynmap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynmap

spec:
  type: LoadBalancer
  selector:
    app: mcgtnh-trap
  ports:
    - name: dynmap
      port: 80
      targetPort: dynmap
