mcgtnh-trap/sshd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sshd

spec:
  type: LoadBalancer
  selector:
    app: sshd
  ports:
    - name: sshd
      port: 25566
      targetPort: sshd
